update list API